--- a/data/courses_and_events/data.yaml
+++ b/data/courses_and_events/data.yaml
@@ -60,7 +60,7 @@ courses:
     makerspace: "film_and_pod"
     #url: "https://m.me/ChalmersTRAX"
     #url_description: "Link to messenger"
-    description: "Go to the form and register to the next course"
+    description: "Go to the form and sign up for our waitlist"
     url: "https://docs.google.com/forms/d/e/1FAIpQLSfIfAuLKEGMBhG-Yby0su49hswmOge3pe7770aR3b8xe3lySg/viewform?usp=sf_link"
     url_description: "Link to form"
 
