Added link to text in fuse_box_yaml

--- a/data/makerspace/fuse_box.yaml
+++ b/data/makerspace/fuse_box.yaml
@@ -54,13 +54,14 @@ content:
       If the parking ticket is still left and your sticker is not updated with a new date of claim on wednesday of study week 1 your box will be cleared and the contents will be thrown away.
       <br><br><b>When you want to start using an empty box: </b>
         <ol>
-          <li>Fill out the form to register your box. (You can modify the information)</li>
+          <li>Fill out the <a href= "https://docs.google.com/forms/d/e/1FAIpQLSc-iNp5IP2PtiEOhFjUrGl-lJXldUoLm75kKkORSWmO0P8kGQ/viewform" target="_blank">form</a> to register your box. (You can modify the information)</li>
           <li>Fill out the sticker and put it on the box (Stickers can be found on a roll at shelf 1)</li>
           <li>Put your stuff in the box (you can also put on a lid on the box if you want)</li>
         </ol>
       If you wish to unclaim your box before the end of the study period simply enter the form again and change the information,
       and mark your sticker on the box with an X over your information. 
     
+
 
 
     
