Different fixes and added text to workshops about

--- a/data/makerspace/rapid.yaml
+++ b/data/makerspace/rapid.yaml
@@ -16,9 +16,10 @@ content:
     Welcome to our Rapid Prototyping Lab, where your creativity meets technology!
     Our lab is equipped with tools designed to bring your concepts to life.
     <br><br>
-    Here, you'll find 3D printers capable of printing in a variety of materials, such as PLA and PETG,
-    allowing you to create prototypes in no time. We also feature a high-precision laser cutter,
-    ideal for intricate designs and precise cuts in materials like wood and acrylic.
-    Additionally, our lab includes a waterjet cutter, perfect for cutting a wide range of materials with exceptional accuracy.
-    Sign up for our next prototyping course to get hands-on experience, or contact us with any questions.
-    "
+    Here, you'll find 3D printers capable of printing in a variety of materials, such as PLA and PETG -
+    plus, we provide free filament to help you bring your projects to life without added costs.
+    We also feature a high-precision laser cutter, ideal for intricate designs and precise cuts 
+    in materials like wood and acrylic. Additionally, our lab includes a waterjet cutter, perfect 
+    for cutting a wide range of materials with exceptional accuracy. Sign up for our next prototyping 
+    course to get hands-on experience, or contact us with any questions."
+
