Started implementing insop page

--- a/config.toml
+++ b/config.toml
@@ -52,12 +52,20 @@ pluralizelisttitles = false
     url        = "/about/the-board"
     weight     = 1
 
+
 [[menu.main]]
     name       = "Documents"
     parent     = "menu.about"
     identifier = "menu.docs"
     url        = "/about/docs"
     weight     = 2
+
+[[menu.main]]
+    name       = "Inspiration"
+    parent     = "menu.about"
+    identifier = "menu.inspiration"
+    url        = "/about/inspiration"
+    weight     = 3
 
 [[menu.main]]
     name       = "Become a member"
