A working inpiration page and some new document in labs_and_workshops.yaml

--- a/data/docs/labs_and_workshops.yaml
+++ b/data/docs/labs_and_workshops.yaml
@@ -7,6 +7,14 @@ list:
     language: "ENG"
     date: "2024-09-09"
     url: "/pdf/docs/Metal_Workshop_Rules2024.pdf"
+
+  -
+    name: "XP bridging material"
+    makerspace: "metal"
+    language: "ENG"
+    date: "2025-02-01"
+    url: "/pdf/docs/metal_material_XP_T-RAX_2025-02-01.pdf"
+
   -
     name: "Wood Workshop Rules"
     makerspace: "wood"
@@ -20,3 +28,4 @@ list:
     language: "SWE"
     date: "2024-09-09"
     url: "/pdf/docs/Studio_material2024.pdf"
+
