Change email from booking to organisator in definition_v1.yaml

--- a/data/board/roles/definition_v1.yaml
+++ b/data/board/roles/definition_v1.yaml
@@ -20,7 +20,7 @@ PR:
   - email: saker@t-rax.se
 
 Secretary:
-  - email: bokning@t-rax.se
+  - email: organisator@t-rax.se
 
 Marketing:
   - email: spons@t-rax.se
