Change the role from secretary to organiser

--- a/data/board/members/board_23-24.yaml
+++ b/data/board/members/board_23-24.yaml
@@ -40,7 +40,7 @@ member:
     image: "img/board/members/23_24/marcus_börne.jpg"
   - 
     weight: 7
-    role: "Secretary"
+    role: "Organiser"
     name: "Ida Udd"
     image: "img/board/members/23_24/ida_udd.jpg"
   - 
