--- a/data/board/members/board_24-25.yaml
+++ b/data/board/members/board_24-25.yaml
@@ -39,7 +39,7 @@ member:
     image: "img/board/members/24_25/måns_jakobi.jpg"
   - 
     weight: 7
-    role: "Secretary"
+    role: "Organiser"
     name: "Ida Udd"
     image: "img/board/members/24_25/ida_udd.jpg"
   - 
