--- a/data/board/roles/definition_v1.yaml
+++ b/data/board/roles/definition_v1.yaml
@@ -20,7 +20,10 @@ PR:
   - email: saker@t-rax.se
 
 Secretary:
-  - email: organisator@t-rax.se
+  - email: booking@t-rax.se
 
 Marketing:
   - email: spons@t-rax.se
+
+Organiser:
+  - email: organisator@t-rax.se
