--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -3,7 +3,7 @@
   title: "First step"
   description: "Send in an application of membership.
   <br>
-  <b><a href=\"https://forms.gle/N4z5FHXTszMQuJgE8\">Follow the steps in the application form</a></b>
+  <b><a href=\"https://forms.gle/LbhjWo1TQEXmbcJc8\">Follow the steps in the application form</a></b>
   "
   icon_url: "img/icons/subtitle_1.png"
 
