change mail link

--- a/data/footer/social.yaml
+++ b/data/footer/social.yaml
@@ -25,5 +25,5 @@
 -
   weight: 5
   name: "Email"
-  url: "mailto:chalmerstrax@gmail.com"
+  url: "mailto:info@t-rax.se"
   pre: "fas fa-2x fa-envelope"
