--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -25,7 +25,7 @@
   title: "Third step"
   description: "Attend a safety walk-through. <br>
   Safety walk-throughs are held by T-RAX board members<br>
-  <b>on Wednesday, safety walk-throughs starts 17:30</b>.<br>
+  <b>on Wednesday, safety walk-throughs starts 17:30 outside our office</b>.<br>
   <br>
   Once the safety walk-through is completed you are allowed in  
   <br>
