--- a/data/features/vinyl_cutter.yaml
+++ b/data/features/vinyl_cutter.yaml
@@ -1,8 +1,6 @@
 weight: 3
-name: "Vinyl cutter"
+name: "Textile"
 icon: "fas fa-globe"
 url: ""
-description: "Do you want to create your own prints?
-In our textile lab you can create your own piece of clothing
-and with the help of a vinyl cutter you can make them truly unique. 
-"
+description: "Want to create your own prints or garments?
+In our textile workshop you can produce custom clothing and accessories, and use tools such as the vinyl cutter to make them truly yours."
