Revert "change frontpage"
This reverts commit c02c8b214f516739162cf8a76cbbfceb8f71dedf.

--- a/data/features/vinyl_cutter.yaml
+++ b/data/features/vinyl_cutter.yaml
@@ -1,6 +1,8 @@
 weight: 3
-name: "Textile"
+name: "Vinyl cutter"
 icon: "fas fa-globe"
 url: ""
-description: "Want to create your own prints or garments?
-In our textile workshop you can produce custom clothing and accessories, and use tools such as the vinyl cutter to make them truly yours."
+description: "Do you want to create your own prints?
+In our textile lab you can create your own piece of clothing
+and with the help of a vinyl cutter you can make them truly unique. 
+"
